Empty Not Visible as Armature Bone Viewport Display Object #64510

Closed
opened 2019-05-12 09:56:45 +02:00 by Predrag Lazic · 7 comments

System Information
Operating system: Linux-4.19.24-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: AMD TURKS (DRM 2.50.0 / 4.19.24-1-MANJARO, LLVM 7.0.1) X.Org 3.3 (Core Profile) Mesa 18.3.3

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: 427c75e4c2
Worked: (optional)

Short description of error
Proxied a rig from 2.7 into a 2.8 bundle. Empty Bone objects weren't visible.

Exact steps for others to reproduce the error
Add a bone, add an empty cube.
Switch to pose mode, head into properties bone menu --> viewport display.
Set empty object as custom object.
All that remains should be point of origin.

**System Information** Operating system: Linux-4.19.24-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: AMD TURKS (DRM 2.50.0 / 4.19.24-1-MANJARO, LLVM 7.0.1) X.Org 3.3 (Core Profile) Mesa 18.3.3 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: `427c75e4c2` Worked: (optional) **Short description of error** Proxied a rig from 2.7 into a 2.8 bundle. Empty Bone objects weren't visible. **Exact steps for others to reproduce the error** Add a bone, add an empty cube. Switch to pose mode, head into properties bone menu --> viewport display. Set empty object as custom object. All that remains should be point of origin.
Author

Added subscriber: @particl3s

Added subscriber: @particl3s
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Clément Foucault was assigned by Philipp Oeser 2019-05-14 10:35:12 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Looks like this is just not implemented (see drw_shgroup_bone_custom_wire / drw_shgroup_bone_custom_wire and related code)

This was supported in 2.79 [at least for empties], so I guess @fclem can have a look?

Looks like this is just not implemented (see `drw_shgroup_bone_custom_wire` / `drw_shgroup_bone_custom_wire` and related code) This was supported in 2.79 [at least for empties], so I guess @fclem can have a look?

This issue was referenced by 846056de6b

This issue was referenced by 846056de6b272d1da087c5ad133f612eecc722af

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64510
No description provided.