Fix T64510 Armature: Empty Not Visible as Bone custom shape