source/blender/draw/intern/draw_armature.c
@@ -80,6 +80,8 @@ static struct {
   DRWCallBuffer *lines_ik_no_target;
   DRWCallBuffer *lines_ik_spline;
 
+  DRWEmptiesBufferList empties;
+
   DRWArmaturePasses passes;
 
   bool transparent;
@@ -432,6 +434,50 @@ static void drw_shgroup_bone_custom_wire(const float (*bone_mat)[4],
     float final_bonemat[4][4];
     mul_m4_m4m4(final_bonemat, g_data.ob->obmat, bone_mat);
     DRW_buffer_add_entry(buf_geom_wire, final_bonemat, final_color);
+  }
+}
+
+static void drw_shgroup_bone_custom_empty(const float (*bone_mat)[4],
+                                          const float color[4],
+                                          const eGPUShaderConfig sh_cfg,
+                                          Object *custom)
+{
+  DRWEmptiesBufferList *buffers = &g_data.empties;
+  const float *draw_size = &custom->empty_drawsize;
+
+  if (g_data.empties.plain_axes == NULL) {
+    empties_callbuffers_create(g_data.passes.bone_wire, buffers, sh_cfg);
+  }
+
+  float final_color[4] = {color[0], color[1], color[2], 1.0f};
+  float final_bonemat[4][4];
+  mul_m4_m4m4(final_bonemat, g_data.ob->obmat, bone_mat);
+
+  switch (custom->empty_drawtype) {
+    case OB_PLAINAXES:
+      DRW_buffer_add_entry(buffers->plain_axes, final_color, draw_size, final_bonemat);
+      break;
+    case OB_SINGLE_ARROW:
+      DRW_buffer_add_entry(buffers->single_arrow, final_color, draw_size, final_bonemat);
+      DRW_buffer_add_entry(buffers->single_arrow_line, final_color, draw_size, final_bonemat);
+      break;
+    case OB_CUBE:
+      DRW_buffer_add_entry(buffers->cube, final_color, draw_size, final_bonemat);
+      break;
+    case OB_CIRCLE:
+      DRW_buffer_add_entry(buffers->circle, final_color, draw_size, final_bonemat);
+      break;
+    case OB_EMPTY_SPHERE:
+      DRW_buffer_add_entry(buffers->sphere, final_color, draw_size, final_bonemat);
+      break;
+    case OB_EMPTY_CONE:
+      DRW_buffer_add_entry(buffers->cone, final_color, draw_size, final_bonemat);
+      break;
+    case OB_ARROWS:
+      DRW_buffer_add_entry(buffers->empty_axes, final_color, draw_size, final_bonemat);
+      break;
+    case OB_EMPTY_IMAGE:
+      break;
   }
 }
 
@@ -1394,6 +1440,12 @@ static void draw_bone_custom_shape(EditBone *eBone,
     DRW_select_load_id(select_id | BONESEL_BONE);
   }
 
+  if (pchan->custom->type == OB_EMPTY) {
+    Object *ob = pchan->custom;
+    if (ob->empty_drawtype != OB_EMPTY_IMAGE) {
+      drw_shgroup_bone_custom_empty(disp_mat, col_wire, sh_cfg, pchan->custom);
+    }
+  }
   if ((boneflag & BONE_DRAWWIRE) == 0) {
     drw_shgroup_bone_custom_solid(disp_mat, col_solid, col_hint, col_wire, sh_cfg, pchan->custom);
   }
